<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/my_books"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/stats"
            android:title="@string/stats" />

        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/books"
            android:title="@string/my_books"/>

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps"
            android:title="@string/books_around_the_world"/>
    </group>

    <group

        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            />
    </group>


</menu>