<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/ThemeOverlay.MyLibrary.FullscreenContainer"
    tools:context=".fragments.welcomeActivity.WelcomeFragment">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />


    <ImageView
        android:id="@+id/transparent"
        style="@style/layout_zero"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_v"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_v0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        style="@style/layout_zero"
        android:fontFamily="@font/allura"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h2"
        app:layout_constraintEnd_toEndOf="@id/guideline_v"
        app:layout_constraintStart_toStartOf="@id/guideline_v0"
        app:layout_constraintTop_toTopOf="@id/guideline_h1" />

    <TextView
        style="@style/layout_zero"
        android:fontFamily="casual"
        android:text="@string/my_library"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h3"
        app:layout_constraintEnd_toEndOf="@id/guideline_v"
        app:layout_constraintStart_toStartOf="@id/guideline_v0"
        app:layout_constraintTop_toTopOf="@id/guideline_h2" />

    <Button
        android:id="@+id/welcome_login"
        style="@style/layout_zero"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h5"
        app:layout_constraintEnd_toEndOf="@id/guideline_v4"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h4" />

    <Button
        android:id="@+id/welcome_register"
        style="@style/layout_zero"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h7"
        app:layout_constraintEnd_toEndOf="@id/guideline_v4"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h6" />
</androidx.constraintlayout.widget.ConstraintLayout>